refactor(routing): remove virtual combo templates
